force-app/main/default/objects/numm__Plan_de_relance__c/numm__Plan_de_relance__c.object-meta.xml
<CustomObject>
    <label>Plan de relance</label>
    <nameField>
        <label>Nom de Plan de relance</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plans de relance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>