force-app/main/default/objects/numm__Plan_de_relance__c/fields/numm__Entite__c.field-meta.xml
<CustomField>
    <fullName>numm__Entite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entité</label>
    <referenceTo>numm__Entity__c</referenceTo>
    <relationshipLabel>Plans de relance</relationshipLabel>
    <relationshipName>Plans_de_relance</relationshipName>
    <type>Lookup</type>
</CustomField>