force-app/main/default/objects/numm__Plan_de_relance__c/fields/numm__EnvelopeType__c.field-meta.xml
<CustomField>
    <fullName>numm__EnvelopeType__c</fullName>
    <description>EnvelopeType : Si ce champ n’est pas renseigné, le type de l&#39;enveloppe est obtenu en fonction du nombre total de feuilles dans le pli. Document de 4 feuilles maximum : Enveloppe petit format C6 (114x229 mm Simple ou Double-fenêtre) Document de 30 feuilles maximum : Enveloppe grand format C4 (210x300 mm, Double fenêtre)</description>
    <inlineHelpText>EnvelopeType : Si ce champ n’est pas renseigné, le type de l&#39;enveloppe est obtenu en fonction du nombre total de feuilles dans le pli. Document de 4 feuilles maximum : Enveloppe petit format C6 (114x229 mm Simple ou Double-fenêtre) Document de 30 feuilles</inlineHelpText>
    <label>ZNU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C6</fullName>
                <default>true</default>
                <label>C6</label>
            </value>
            <value>
                <fullName>C4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>