force-app/main/default/objects/numm__Plan_de_relance__c/fields/numm__EnvelopeWindowType__c.field-meta.xml
<CustomField>
    <fullName>numm__EnvelopeWindowType__c</fullName>
    <description>EnvelopeWindowType : Type de fenêtres de l’enveloppe SMPL : Enveloppe Simple fenêtre DBL : Enveloppe Double fenêtre</description>
    <inlineHelpText>EnvelopeWindowType : Type de fenêtres de l’enveloppe SMPL : Enveloppe Simple fenêtre DBL : Enveloppe Double fenêtre</inlineHelpText>
    <label>ZNUEnvelopeWindowType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMPL</fullName>
                <default>true</default>
                <label>SMPL</label>
            </value>
            <value>
                <fullName>DBL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>