force-app/main/default/objects/numm__Plan_de_relance__c/fields/numm__Plan_unique__c.field-meta.xml
<CustomField>
    <fullName>numm__Plan_unique__c</fullName>
    <label>Plan unique</label>
    <length>55</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>