force-app/main/default/objects/numm__Plan_de_relance__c/fields/numm__PrintDuplex__c.field-meta.xml
<CustomField>
    <fullName>numm__PrintDuplex__c</fullName>
    <defaultValue>false</defaultValue>
    <description>&quot; PrintDuplex : Cet attribut permet au client de demander une impression recto-verso de tous les documents du
pli. L’impression sera de type ‘retourner sur le bord long’.&quot;</description>
    <inlineHelpText>&quot; PrintDuplex : Cet attribut permet au client de demander une impression recto-verso de tous les documents du
pli. L’impression sera de type ‘retourner sur le bord long’.&quot;</inlineHelpText>
    <label>ZNUPrintDuplex</label>
    <type>Checkbox</type>
</CustomField>