force-app/main/default/objects/numm__Plan_de_relance__c/fields/numm__PrintSenderAddress__c.field-meta.xml
<CustomField>
    <fullName>numm__PrintSenderAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Impression de l’adresse de l’expéditeur</description>
    <inlineHelpText>Impression de l’adresse de l’expéditeur</inlineHelpText>
    <label>ZNUPrintSenderAddress</label>
    <type>Checkbox</type>
</CustomField>