force-app/main/default/objects/numm__Plan_de_relance__c/fields/numm__Role_du_Tiers__c.field-meta.xml
<CustomField>
    <fullName>numm__Role_du_Tiers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Role du Tiers</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__ThirdPartyRule__c.numm__Entite__c</field>
            <operation>equals</operation>
            <valueField>$Source.numm__Entite__c</valueField>
        </filterItems>
        <filterItems>
            <field>numm__ThirdPartyRule__c.numm__IdctrlAccounting__r.numm__TypeDeCollectif__c</field>
            <operation>equals</operation>
            <value>CLI</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__ThirdPartyRule__c</referenceTo>
    <relationshipLabel>Plans de relance</relationshipLabel>
    <relationshipName>Plans_de_relance</relationshipName>
    <type>Lookup</type>
</CustomField>