force-app/main/default/objects/numm__Plan_de_relance__c/fields/numm__Societe__c.field-meta.xml
<CustomField>
    <fullName>numm__Societe__c</fullName>
    <label>NU</label>
    <length>100</length>
    <type>Text</type>
</CustomField>