force-app/main/default/objects/numm__Plan_de_relance__c/fields/numm__TreatAR__c.field-meta.xml
<CustomField>
    <fullName>numm__TreatAR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TreatAR : Gestion électronique des AR (Avis de Réception) Cette option précise si le client souhaite que Maileva reçoive, numérise, mette en ligne l’image et archive physiquement les Avis de Réception des courriers recommandés envoyés. Cette option et l’option d’impression de l’adresse de l’expéditeur (PrintSenderAddress) ne sont pas compatibles entre elles.</description>
    <inlineHelpText>TreatAR : Gestion électronique des AR (Avis de Réception) Cette option précise si le client souhaite que Maileva reçoive, numérise, mette en ligne l’image et archive physiquement les Avis de Réception des courriers recommandés envoyés. Cette option et l’o</inlineHelpText>
    <label>ZNUTreatAR</label>
    <type>Checkbox</type>
</CustomField>