force-app/main/default/objects/numm__Plan_de_relance__c/recordTypes/numm__Donneur_ordre_public.recordType-meta.xml
<RecordType>
    <fullName>numm__Donneur_ordre_public</fullName>
    <active>true</active>
    <label>Donneur d&#39;ordre public</label>
</RecordType>