force-app/main/default/objects/numm__Plan_de_relance__c/recordTypes/numm__Entreprise_privee.recordType-meta.xml
<RecordType>
    <fullName>numm__Entreprise_privee</fullName>
    <active>true</active>
    <label>Entreprise</label>
</RecordType>