force-app/main/default/objects/numm__Plan_de_relance__c/recordTypes/numm__Particulier.recordType-meta.xml
<RecordType>
    <fullName>numm__Particulier</fullName>
    <active>true</active>
    <label>Particulier</label>
</RecordType>