force-app/main/default/objects/numm__Plan_de_relance__c/listViews/numm__Tous.listView-meta.xml
<ListView>
    <fullName>numm__Tous</fullName>
    <columns>NAME</columns>
    <columns>numm__Entite__c</columns>
    <columns>numm__Role_du_Tiers__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>numm__Plan_unique__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tous</label>
    <language>fr</language>
</ListView>